--- a/team/templates/team/team.html
+++ b/team/templates/team/team.html
@@ -8,8 +8,7 @@
     <h1>Meet The Digital Relatives!</h1>
 </section>
 <div class="banner">
-    <!-- Changed quantity from 7 to 6 -->
-    <div class="slider" style="--quantity: 6">
+    <div class="slider" style="--quantity: 6"> <!-- Adjust the number of items here -->
         <div class="item" style="--position: 6">
             <div class="spacing">
                 <div class="polariod" data-name="Asya Haroyan" data-bio="Don't know what to put here"
@@ -114,9 +113,11 @@
             </div>
         </div>
     </div>
-</div>
-<div class="light">
-    <img src="{% static 'images/team-logo.png' %}" alt="team logo" class="light-img">
+    
+    <!-- Centered logo -->
+    <div class="light">
+        <img src="{% static 'images/team-logo.png' %}" alt="team logo" class="rounded-circle">
+    </div>
 </div>
 <div class="details-section data-border" id="details-section">
     <button class="close-btn">x</button>
