contact notes updated

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -6,15 +6,11 @@
 <!-- Contact form page -->
 <div class="row g-0 justify-content-center">
     <div class="col-12 col-md-6 my-5" id="contact-pg">
-        <h2 id="contact-heading">We love crafting!</h2>
+        <h2 id="contact-heading">We love to hear from you!</h2>
         <div id="contact-description">
-            <p>Have you seen anything on this blog that takes your fancy? Maybe you have got inspiration from a website
-                and need help? Ask us!</p>
-            <p>One of our members specialises in knitted socks and items, textiles, and small woodworking projects. The
-                other member specialises in paracord projects, rope both new and upcycled, and chainmail.</p>
-            <p>Both of us make historically inspired items. We nålbind (needle-binding), a type of yarn work
-                that predates knitting or crochet. We have been known to hand stitch hats, bags, and pouches, and even
-                tunics and dresses!</p>
+            <p>Do you have any suggestions?</p>
+            <p>Would you like to just say hi?</p>
+            <p>Please drop us a line and we will get back to as soon as we can.</p>
         </div>
         <!-- Form to be used for contacting/ordering -->
         <form id="contactForm" class="contact-form" method="post" action="{% url 'contact' %}">
