--- a/static/css/note.css
+++ b/static/css/note.css
@@ -92,6 +92,20 @@ border: 2px solid #0c1d2f;
 border-radius: 5px;
 margin: 0;
 }
+
+#clear_chat {
+display: inline-flex;
+align-items: center;
+justify-content: center;
+cursor: pointer;
+font-size: 20px;
+background-color: #e6f0ff;
+height: 30px;
+width: 30px;
+border: 2px solid #0c1d2f;
+border-radius: 5px;
+margin: 0; 
+}
 /* Success notification */
 .notification-message {
 transition: opacity 0.5s ease-in-out;
